@@ -22,7 +22,7 @@
 .\"
 .\" CDDL HEADER END
 .\"
-.\"ident	"@(#)index.me	1.5	05/06/08 SMI"
+.\" from OpenSolaris	index.me	1.5	05/06/08 SMI
 .\"
 .\" University Copyright- Copyright (c) 1982, 1986, 1988
 .\" The Regents of the University of California
@@ -32,8 +32,13 @@
 .\" software developed by the University of California, Berkeley, and its
 .\" contributors.
 .\"
+.\" Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
+.\"
+.\" Sccsid @(#)index.me	1.2 (gritter) 11/11/06
+.\"
 .nr _0 \n(c.
-.\"	@(#)index.me	2.8	3/19/81
+.if \n(.X .do nr IXcount 0 1
+.\"	from index.me	2.8	3/19/81
 .de (x
 .ds |X x
 .if \\n(.$>0 \
@@ -46,7 +51,10 @@
 .\}
 .el \
 \{\
-.	am %\\*(|X )x
+.	ie \\n(.X \
+.		do de (x-\\n+[IXcount] )x
+.	el \
+.		am %\\*(|X )x
 .	sp \\n(xsu
 .	ti -\\n(piu
 .\}
@@ -54,16 +62,36 @@
 .de )x
 .ie "\\n(.z"" \
 \{\
-.	ds |x \\n%
-.	if \\n(.$>0 \
-.		ds |x \\$1
-.	if "\\*(|x"_" \
-.		ig ..
-.	am %\\*(|X ..
-.	if \w"\\$2">(\\n(.l-\\n(.i-\\n(.k) \
-.		ti +\\n(xuu
+.	ie (\\n(.X=0):(\\n(.$>0) \
+\{\
+.		ds |x \\n%
+.		if \\n(.$>0 \
+.			ds |x \\$1
+.		if "\\*(|x"_" \
+.			ig ..
+.		am %\\*(|X ..
+.		if \w"\\$2">(\\n(.l-\\n(.i-\\n(.k) \
+.			ti +\\n(xuu
 \\\\a\\\\t\\$2\\*(|x
 ...
+.	\}
+.	el \
+\{\
+.		do de IX-\\n[IXcount]
+.		do am (x-\\n[IXcount] ..
+.		if \w"\\$2">(\\n(.l-\\n(.i-\\n(.k) \
+.			ti +\\n(xuu
+\\\\\\\\a\\\\\\\\t\\$2\\\\n%
+\\..\\.
+.		am %\\*(|X ..
+.		do (x-\\n[IXcount]
+\\..\\.
+\\..
+.	do nr IXsaveX \\n(.X
+.	do xflag 3
+\\P[IX-\\n[IXcount]]\c
+.	do xflag \\n[IXsaveX]
+.	\}
 .	rm |x
 .	rm |X
 .\}
